--- a/analysis/FinalAnalysis.Rmd
+++ b/analysis/FinalAnalysis.Rmd
@@ -96,7 +96,7 @@ mtext("20161115_5hmC_Jump_Seq_2hmC_spike_in.plus", outer = TRUE, cex = 1)
 ### corrleation among replicates 
 
 ```{r, echo=F, fig.cap="Reads correlations in 1kb windows between two 5hmC replicates. log2 transformation in calculation of correlations  of number of reads", warning=F, cache=T}
-#pdf("../../Figure/correlation_two_5hmc.pdf")
+#png("../../Figure/correlation_two_5hmc.png")
 reads=read.table("../../5hmC/mm9.genome.1kb.window.bed.CHe-Lu-1_S12_L005_R1_001.plus.21.bp.bed.He-Lu-lu-1-48ng_S1_L006_R1_001.plus.21.bp.win.bed", header=F)
 reads1=as.numeric(as.character(reads[,4]))
 reads2=as.numeric(as.character(reads[,5]))
@@ -114,11 +114,12 @@ legend(0, 12, c("r=0.94"))
 ```{r, echo=F, warning=F, eval=F}
 reads1=as.numeric(as.character(read.table("../../5hmC/first.six.sample.sorted.bam.cove.base.level.extend.bed.with.reads.second.six.sample.sorted.bam.cove.base.level.extend.bed.with.reads.bed.reads.1", header=F)[,1]))
 reads1[is.na(reads1)]=0
-reads2=as.numeric(as.character(read.table("..\\5hmC\\first.six.sample.sorted.bam.cove.base.level.extend.bed.with.reads.second.six.sample.sorted.bam.cove.base.level.extend.bed.with.reads.bed.reads.2", header=F)[,1]))
+reads2=as.numeric(as.character(read.table("../../5hmC/first.six.sample.sorted.bam.cove.base.level.extend.bed.with.reads.second.six.sample.sorted.bam.cove.base.level.extend.bed.with.reads.bed.reads.2", header=F)[,1]))
 reads2[is.na(reads2)]=0
+#png("../../Figure/correlation_two_5hmc_48ng_combine.png")
 plot(log2(reads1), log2(reads2), pch=16, xlab="Combined sample 1", ylab="Combined sample 2", main="48ng combine 5hmC")
 legend(0, 15, c("r=0.98"))
-
+#dev.off()
 ```
 
 
@@ -128,20 +129,25 @@ reads1=as.numeric(as.character(read.table("../../5hmC/correlation/20160601_5hmC_
 reads1[is.na(reads1)]=0
 reads2=as.numeric(as.character(read.table("../../5hmC/correlation/20160601_5hmC_Jump_Seq_24ng.minus.FDR0.05.corrected.txt.bed.He-lu-7_S9_L006_R1_001.minus.FDR0.05.corrected.txt.bed.bed.reads.2", header=F)[,1]))
 reads2[is.na(reads2)]=0
+#png("../../Figure/correlation_two_5hmc_24ng.png")
 plot(log2(reads1), log2(reads2), pch=16, xlab="Rep 1", ylab="Rep 2", main="24ng 5hmC")
 legend(2, 12, c("r=0.99"))
-
+#dev.off()
 ```
 
 
 ```{r, echo=F, warning=F}
-reads1=as.numeric(as.character(read.table("../../5hmC/correlation/20160428_5hmC_Jump_Seq_NPM_12ng.minus.FDR0.05.txt.bed.CHe-Lu-3_S14_L005_R1_001.minus.FDR0.05.txt.bed.bed.reads.1", header=F)[,1]))
-reads1[is.na(reads1)]=0
-reads2=as.numeric(as.character(read.table("../../5hmC/correlation/20160428_5hmC_Jump_Seq_NPM_12ng.minus.FDR0.05.txt.bed.CHe-Lu-3_S14_L005_R1_001.minus.FDR0.05.txt.bed.bed.reads.2", header=F)[,1]))
-reads2[is.na(reads2)]=0
-plot(log2(reads1), log2(reads2), pch=16, xlab="Rep 1", ylab="Rep 2", main="12ng 5hmC")
-legend(2, 12, c("r=-0.09"))
+#reads1=as.numeric(as.character(read.table("../../5hmC/correlation/20160428_5hmC_Jump_Seq_NPM_12ng.minus.FDR0.05.txt.bed.CHe-Lu-3_S14_L005_R1_001.minus.FDR0.05.txt.bed.bed.reads.1", header=F)[,1]))
+reads1=as.numeric(as.character(read.table("../../5hmC/correlation/CHe-Lu-12ng_L008_R1_001.minus.FDR0.05.txt.bed.He-Lu-8_12ng-S2_L001_R1_001.minus.FDR0.05.txt.bed.bed.reads.1", header=F)[,1]))
 
+reads1[is.na(reads1)]=0
+#reads2=as.numeric(as.character(read.table("../../5hmC/correlation/20160428_5hmC_Jump_Seq_NPM_12ng.minus.FDR0.05.txt.bed.CHe-Lu-3_S14_L005_R1_001.minus.FDR0.05.txt.bed.bed.reads.2", header=F)[,1]))
+reads2=as.numeric(as.character(read.table("../../5hmC/correlation/CHe-Lu-12ng_L008_R1_001.minus.FDR0.05.txt.bed.He-Lu-8_12ng-S2_L001_R1_001.minus.FDR0.05.txt.bed.bed.reads.2", header=F)[,1]))
+reads2[is.na(reads2)]=0
+#png("../../Figure/correlation_two_5hmc_12ng.png")
+plot(log2(reads1), log2(reads2), pch=16, xlab="Rep 1", ylab="Rep 2", main="12ng 5hmC")
+legend(2, 12, c("r=0.98"))
+#dev.off()
 ```
 
 
@@ -152,9 +158,10 @@ reads1=as.numeric(as.character(read.table("../../5hmC/correlation/20160428_5hmC_
 reads1[is.na(reads1)]=0
 reads2=as.numeric(as.character(read.table("../../5hmC/correlation/20160428_5hmC_Jump_Seq_NPM_6ng.minus.FDR0.05.txt.bed.CHe-Lu-6ng_L008_R1_001.minus.FDR0.05.txt.bed.bed.reads.2", header=F)[,1]))
 reads2[is.na(reads2)]=0
+#png("../../Figure/correlation_two_5hmc_6ng.png")
 plot(log2(reads1), log2(reads2), pch=16, xlab="Rep 1", ylab="Rep 2", main="6ng 5hmC")
 legend(2, 12, c("r=0.95"))
-
+#dev.off()
 ```
 
 
@@ -164,9 +171,10 @@ reads1=as.numeric(as.character(read.table("../../5hmC/correlation/CHe-lu-2.4ng_m
 reads1[is.na(reads1)]=0
 reads2=as.numeric(as.character(read.table("../../5hmC/correlation/CHe-lu-2.4ng_mixed_with_other_library.minus.FDR0.05.corrected.txt.bed.He-Lu-10_2.4ng-S5_L001_R1_001.minus.FDR0.05.corrected.txt.bed.bed.reads.2", header=F)[,1]))
 reads2[is.na(reads2)]=0
+#png("../../Figure/correlation_two_5hmc_2.4ng.png")
 plot(log2(reads1), log2(reads2), pch=16, xlab="Rep 1", ylab="Rep 2", main="2.4ng 5hmC")
 legend(2, 10, c("r=0.99"))
-
+#dev.off()
 ```
 
 
@@ -421,7 +429,7 @@ reads1=as.numeric(as.character(read.table("C:\\Shengtong\\Research\\Jump-Seq\\5m
 reads1[is.na(reads1)]=0
 reads2=as.numeric(as.character(read.table("C:\\Shengtong\\Research\\Jump-Seq\\5mC\\20160811_5mC_Jump_Seq_2.4ng.minus.21.bp.win.5prime.pstv.cove.bed.numberC.combine.pvalue.He-Lu-10_5mc-jump-2.4ng-S10_L004_R1_001.minus.21.bp.win.5prime.pstv.cove.bed.numberC.combine.pvalue.bed.reads.2", header=F)[,1]))
 reads2[is.na(reads2)]=0
-#pdf("../../Figure/correlation_two_5mc_2.4ng.pdf")
+#png("../../Figure/correlation_two_5mc_2.4ng.png")
 plot(log2(reads1), log2(reads2), pch=16, xlab="Rep 1", ylab="Rep 2", main="2.4ng 5mC")
 legend(0, 12, c("r=0.98"))
 #dev.off()
@@ -432,7 +440,7 @@ reads1=as.numeric(as.character(read.table("C:\\Shengtong\\Research\\Jump-Seq\\5m
 reads1[is.na(reads1)]=0
 reads2=as.numeric(as.character(read.table("C:\\Shengtong\\Research\\Jump-Seq\\5mC\\20160811_5mC_Jump_Seq_6ng.minus.pvalue10-6.bed.He-Lu-9_5mc-jump-6ng-S9_L004_R1_001.minus.pvalue10-6.bed.bed.reads.2", header=F)[,1]))
 reads2[is.na(reads2)]=0
-#pdf("../../Figure/correlation_two_5mc_2.4ng.pdf")
+#png("../../Figure/correlation_two_5mc_6ng.png")
 plot(log2(reads1), log2(reads2), pch=16, xlab="Rep 1", ylab="Rep 2", main="6ng 5mC")
 legend(2, 12, c("r=0.91"))
 #dev.off()
@@ -445,7 +453,7 @@ reads1=as.numeric(as.character(read.table("C:\\Shengtong\\Research\\Jump-Seq\\5m
 reads1[is.na(reads1)]=0
 reads2=as.numeric(as.character(read.table("C:\\Shengtong\\Research\\Jump-Seq\\5mC\\20160811_5mC_Jump_Seq_12ng.minus.pvalue10-6.bed.He-Lu-8_5mc-jump-12ng-S8_L004_R1_001.minus.pvalue10-6.bed.bed.reads.2", header=F)[,1]))
 reads2[is.na(reads2)]=0
-#pdf("../../Figure/correlation_two_5mc_2.4ng.pdf")
+#png("../../Figure/correlation_two_5mc_12ng.png")
 plot(log2(reads1), log2(reads2), pch=16, xlab="Rep 1", ylab="Rep 2", main="12ng 5mC")
 legend(2, 12, c("r=0.97"))
 #dev.off()
@@ -459,7 +467,7 @@ reads1=as.numeric(as.character(read.table("C:\\Shengtong\\Research\\Jump-Seq\\5m
 reads1[is.na(reads1)]=0
 reads2=as.numeric(as.character(read.table("C:\\Shengtong\\Research\\Jump-Seq\\5mC\\20160811_5mC_Jump_Seq_24ng.minus.pvalue10-6.bed.He-Lu-7_5mC-jump-24ng-S7_L004_R1_001.minus.pvalue10-6.bed.bed.reads.2", header=F)[,1]))
 reads2[is.na(reads2)]=0
-#pdf("../../Figure/correlation_two_5mc_2.4ng.pdf")
+#png("../../Figure/correlation_two_5mc_24ng.png")
 plot(log2(reads1), log2(reads2), pch=16, xlab="Rep 1", ylab="Rep 2", main="24ng 5mC")
 legend(2, 12, c("r=0.98"))
 #dev.off()
@@ -473,7 +481,7 @@ reads1=as.numeric(as.character(read.table("C:\\Shengtong\\Research\\Jump-Seq\\5m
 reads1[is.na(reads1)]=0
 reads2=as.numeric(as.character(read.table("C:\\Shengtong\\Research\\Jump-Seq\\5mC\\20160811_5mC_Jump_Seq_48ng.minus.pvalue10-6.bed.He-Lu-6_5mC-jump-48ng-S6_L004_R1_001.minus.pvalue10-6.bed.bed.reads.2", header=F)[,1]))
 reads2[is.na(reads2)]=0
-#pdf("../../Figure/correlation_two_5mc_2.4ng.pdf")
+#png("../../Figure/correlation_two_5mc_48ng.png")
 plot(log2(reads1), log2(reads2), pch=16, xlab="Rep 1", ylab="Rep 2", main="48ng 5mC")
 legend(2, 12, c("r=0.93"))
 #dev.off()
